--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "framer-motion": "^4.1.17",
     "next": "9.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-icons": "^4.2.0",
-    "react-reveal": "^1.2.2",
-    "sass": "^1.26.10"
+    "react-reveal": "^1.2.2"
   }
 }
