--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "react-dom": "16.13.1",
     "react-icons": "^4.2.0",
     "react-reveal": "^1.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "^15.12.1",
+    "@types/react": "^17.0.9",
+    "typescript": "^4.3.2"
   }
 }
