--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0",
-    "react-reveal": "^1.2.2"
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^15.12.1",
